# cocos2dx-3.2-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cocos/: CMakeLists.txt  cocos2d.h
cocos/2d/: CCAtlasNode.cpp  CCClippingNode.cpp  CCFontAtlas.cpp  CCLabel.cpp  CCLabelAtlas.cpp  CCLabelTextFormatter.cpp  CCLayer.h  CCSpriteBatchNode.cpp
cocos/audio/android/: cddSimpleAudioEngine.cpp
cocos/audio/android/jni/: cddandroidAndroidJavaEngine.cpp  cddandroidAndroidJavaEngine.h
cocos/audio/include/: SimpleAudioEngine.h
cocos/audio/ios/: CocosDenshion.m  SimpleAudioEngine.mm  SimpleAudioEngine_objc.h  SimpleAudioEngine_objc.m
cocos/audio/mac/: CocosDenshion.h  CocosDenshion.m  SimpleAudioEngine.mm
cocos/base/: CCConsole.cpp  CCDirector.cpp  CCDirector.h  CCMap.h  CCPlatformConfig.h  CCVector.h  CMakeLists.txt  ZipUtils.h
cocos/editor-support/cocosbuilder/: Android.mk  CCBAnimationManager.cpp  CCBReader.cpp  CCBReader.h  CCControlButtonBMFontLoader.cpp  CCControlButtonBMFontLoader.h  CCControlButtonLoader.cpp  CCControlButtonLoader.h  CCLabelTTFLoader.cpp  CCLabelTTFLoader.h  CCNodeLoader.cpp  CCNodeLoader.h  CCNodeLoaderLibrary.cpp  CCRepeat9SpriteLoader.cpp  CCRepeat9SpriteLoader.h  CMakeLists.txt  TTFConfigLoader.cpp  TTFConfigLoader.h
cocos/editor-support/cocosbuilder/proj.win32/: libCocosBuilder.vcxproj  libCocosBuilder.vcxproj.filters
cocos/editor-support/cocostudio/: CCComAudio.cpp  CCSSceneReader.cpp  CMakeLists.txt  TriggerMng.cpp
cocos/editor-support/spine/: Animation.cpp  CCSkeleton.cpp  Skeleton.cpp  Skeleton.h  SkeletonBounds.cpp  SkeletonData.cpp  SkeletonData.h  SkeletonJson.cpp  Skin.cpp  Slot.cpp
cocos/network/: CMakeLists.txt
cocos/platform/: CCImage.cpp  CMakeLists.txt
cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxHelper.java  Cocos2dxSound.java
cocos/platform/qt/: CCApplication.cpp  CCApplication.h  CCCommon.cpp  CCDevice.cpp  CCFileUtilsQt.cpp  CCFileUtilsQt.h  CCGL.h  CCGLView.cpp  CCGLView.h  CCGLWidget.cpp  CCGLWidget.h  CCPlatformDefine.h  CCStdC.h
cocos/platform/qt/glfw/: CCApplication.cpp  CCApplication.h  CCCommon.cpp  CCDevice.cpp  CCFileUtilsQt.cpp  CCFileUtilsQt.h  CCGL.h  CCGLThread.cpp  CCGLThread.h  CCGLView.cpp  CCGLView.h  CCPlatformDefine.h  CCStdC.cpp  CCStdC.h  Cocos2dxBridge.cpp  Cocos2dxBridge.h  UIMessageAdapter.cpp  UIMessageAdapter.h
cocos/platform/win32/: CCDevice.cpp
cocos/renderer/: CCGLProgram.cpp  CCGLProgram.h  CCGLProgramCache.cpp  ccShader_UI_Gray.frag  ccShaders.cpp  ccShaders.h
cocos/scripting/lua-bindings/: Android.mk  CMakeLists.txt
cocos/scripting/lua-bindings/auto/: lua_cocos2dx_auto.cpp  lua_cocos2dx_extension_auto.cpp  lua_cocos2dx_spine_auto.cpp  lua_qt_bridge_auto.cpp  lua_qt_bridge_auto.hpp
cocos/scripting/lua-bindings/auto/api/: Cocos2dxBridge.lua  lua_qt_bridge_auto_api.lua
cocos/scripting/lua-bindings/manual/: CCLuaStack.cpp  Lua_web_socket.cpp  Lua_web_socket.h  lua_cocos2dx_extension_manual.cpp  lua_cocos2dx_manual.cpp  lua_cocos2dx_spine_manual.cpp  lua_extensions.c  lua_json.cpp  lua_json.h
cocos/scripting/lua-bindings/proj.ios_mac/cocos2d_lua_bindings.xcodeproj/xcuserdata/jennal.xcuserdatad/xcschemes/: xcschememanagement.plist
cocos/scripting/lua-bindings/script/: Deprecated.lua  json.lua
cocos/storage/: CMakeLists.txt
cocos/ui/: UITextField.cpp
extensions/: CMakeLists.txt  cocos-ext.h
extensions/GUI/CCControlExtension/: CCControlButton.cpp  CCControlButton.h  CCControlExtensions.h  CCScale9Sprite.cpp  CCScale9Sprite.h
extensions/GUI/CCControlExtension/RepeatNode/: Repeat9Sprite.cpp  Repeat9Sprite.h  RepeatEnum.h  RepeatNode.cpp  RepeatNode.h
extensions/GUI/CCEditBox/: CCEditBoxImplIOS.h
extensions/assets-manager/: AssetsManager.cpp
extensions/ext/: CCSpriteWithHue.cpp  CCSpriteWithHue.h
templates/lua-template-runtime/runtime/: version.json
templates/lua-template-runtime/runtime/ios/PrebuiltRuntimeLua.app/: Info.plist
templates/lua-template-runtime/runtime/mac/PrebuiltRuntimeLua.app/Contents/: Info.plist
tests/cpp-empty-test/: CMakeLists.txt
tests/cpp-empty-test/Classes/: AppDelegate.cpp  AppDelegate.h  AppMacros.h  HelloWorldScene.cpp
tests/cpp-empty-test/proj.qt/: CMakeLists.txt  main.cpp
tests/cpp-empty-test/proj.qt/src/: GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  TabPageWidget.cpp  TabPageWidget.h
tests/cpp-empty-test/proj.qt/ui/: MainWindow.ui
tests/lua-tests/res/cocosbuilderRes/: CocosBuilderExample.ccbproj
tests/lua-tests/res/cocosbuilderRes/ccb/: HelloCocosBuilder.ccb
tests/lua-tests/res/cocosbuilderRes/publish/ccb/ccb/: Untitled.ccb
tests/lua-tests/res/cocosbuilderRes/publish/lua/: HelloCocosBuilder.lua  TestAnimations.lua  TestButtons.lua  TestHeader.lua  TestLabels.lua  TestMenus.lua  TestParticleSystems.lua  TestScrollViews.lua  TestSprites.lua  TestTimelineCallback.lua
tools/bindings-generator/targets/lua/: conversions.yaml
tools/tolua/: genbindings.py  qt_bridge.ini  userconf.ini
